JSDoc으로 주석 갈음하는 중

--- a/index.html
+++ b/index.html
@@ -195,9 +195,23 @@
         <div class="modal_window of_option">
             <div>
                 <div>
-                    <div class="modal_title">OPTION</div>
-                    <table></table>
-                    <a href="#" class="modal_button optionOK"><span>OK</span></a>
+                    <div class="modal_title">OPTIONS</div>
+                    <div></div>
+                    <a href="#" class="modal_button optionDone"><span>DONE</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" id="keyInput">
+        <div class="modal_window of_keyInput">
+            <div>
+                <div>
+                    <p>PRESS THE DESIRED KEY FOR</p>
+                    <div class="modal_title">Keyboard</div>
+                    <dialog class="speech_bubble" id="invalid_key">
+                        <span>Invalid Key&nbsp;&nbsp;<a href="#" id="closeInvalidKey">✖</a></span>
+                    </dialog>
+                    <a href="#" class="modal_button cancel"><span>CANCEL</span></a>
                 </div>
             </div>
         </div>
