JSDoc 주석 갈음 完

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="level_button">
                 <a href="#" class="arrow_button left_arrow" id="levelMinus"><span>◀</span></a>
                 <a href="#" class="home_button level" id="levelup"><span>LEVEL: 1</span></a>
-                <a href="#" class="arrow_button right_arrow" id="levelPlus"><span>▶</p></span>
+                <a href="#" class="arrow_button right_arrow" id="levelPlus"><span>▶</p></span></a>
             </div>
             <a href="#" class="home_button O_block option"><span>OPTIONS</span></a>
             <a href="#" class="home_button S_block howtoplay"><span>HOW TO PLAY</span></a>
