--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#" class="home_button J_block highscores"><span>HIGH SCORES</span></a>
         </div>
     </div>
-    <div id="ingame">
+    <div id="ingame" style="visibility: hidden;">
         <audio id="bgm">
             <source src="./sound/bgm/Korobeiniki.mp3" type="audio/mpeg">
             <source src="./sound/bgm/Korobeiniki.ogg" type="audio/ogg">
@@ -195,20 +195,16 @@
         <div class="modal_window of_option">
             <div>
                 <div>
-                    <div class="modal_title">OPTIONS</div>
+                    <div class="modal_title wordForWord" id="options">OPTIONS</div>
                     <div class="twoColTable" style="z-index: 1;">
                         <table class="optionTable">
                             <tbody>
                                 <tr>
-                                    <td>LANGUAGE</td>
+                                    <td class="wordForWord" id="index_lang">LANGUAGE</td>
                                     <td>
-                                        <div class="dropdownBtn"><p>ENGLISH</p><p>∨</p></div>
+                                        <div class="dropdownBtn"><p class="wordForWord" id="your_language"></p><p>∨</p></div>
                                         <div id="dropdownBox">
-                                            <div id="dropdown-contents">
-                                                <a href="#">ENGLISH</a>
-                                                <a href="#">ENGLISH</a>
-                                                <a href="#">ENGLISH</a>
-                                            </div>
+                                            <div id="dropdown-contents"></div>
                                         </div>
                                     </td>
                                 </tr>
@@ -221,35 +217,35 @@
                             <tbody>
                                 <tr>
                                     <td>PAUSE</td>
-                                    <td><div class="optionBtn btn-hover keyBtn pause">Key P</div></td>                                    
+                                    <td><div class="optionBtn btn-hover keyBtn pause" id="pause_key">Key P</div></td>                                    
                                 </tr>
                                 <tr>
                                     <td>MOVE LEFT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn move_left">Left Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn move_left" id="move_left_key">Left Arrow</div></td>
                                 </tr>
                                 <tr>
                                     <td>MOVE RIGHT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn move_right">Right Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn move_right" id="move_right_key">Right Arrow</div></td>
                                 </tr>
                                 <tr>
                                     <td>ROTATE LEFT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn rotate_left">Key Z</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn rotate_left" id="rotate_left_key">Key Z</div></td>
                                 </tr>
                                 <tr>
                                     <td>ROTATE RIGHT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn rotate_right">Up Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn rotate_right" id="rotate_right_key">Up Arrow</div></td>
                                 </tr>
                                 <tr>
                                     <td>SOFT DROP</td>
-                                    <td><div class="optionBtn btn-hover keyBtn sotf_drop">Down Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn soft_drop" id="soft_drop_key">Down Arrow</div></td>
                                 </tr>
                                 <tr>
                                     <td>HARD DROP</td>
-                                    <td><div class="optionBtn btn-hover keyBtn hard_drop">Space</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn hard_drop" id="hard_drop_key">Space</div></td>
                                 </tr>
                                 <tr>
                                     <td>HOLD</td>
-                                    <td><div class="optionBtn btn-hover keyBtn hold">Key C</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn hold" id="hold_key">Key C</div></td>
                                 </tr>
                             </tbody>
                         </table>
