[js] CryptoJS 암호화 함수 구현

--- a/index.html
+++ b/index.html
@@ -217,35 +217,35 @@
                             <tbody>
                                 <tr>
                                     <td>PAUSE</td>
-                                    <td><div class="optionBtn btn-hover keyBtn pause" id="pause_key">Key P</div></td>                                    
+                                    <td><div class="optionBtn btn-hover keyBtn pause" id="pause_key"></div></td>                                    
                                 </tr>
                                 <tr>
                                     <td>MOVE LEFT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn move_left" id="move_left_key">Left Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn" id="move_left_key"></div></td>
                                 </tr>
                                 <tr>
                                     <td>MOVE RIGHT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn move_right" id="move_right_key">Right Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn" id="move_right_key"></div></td>
                                 </tr>
                                 <tr>
                                     <td>ROTATE LEFT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn rotate_left" id="rotate_left_key">Key Z</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn" id="rotate_left_key"></div></td>
                                 </tr>
                                 <tr>
                                     <td>ROTATE RIGHT</td>
-                                    <td><div class="optionBtn btn-hover keyBtn rotate_right" id="rotate_right_key">Up Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn" id="rotate_right_key"></div></td>
                                 </tr>
                                 <tr>
                                     <td>SOFT DROP</td>
-                                    <td><div class="optionBtn btn-hover keyBtn soft_drop" id="soft_drop_key">Down Arrow</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn" id="soft_drop_key"></div></td>
                                 </tr>
                                 <tr>
                                     <td>HARD DROP</td>
-                                    <td><div class="optionBtn btn-hover keyBtn hard_drop" id="hard_drop_key">Space</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn" id="hard_drop_key"></div></td>
                                 </tr>
                                 <tr>
                                     <td>HOLD</td>
-                                    <td><div class="optionBtn btn-hover keyBtn hold" id="hold_key">Key C</div></td>
+                                    <td><div class="optionBtn btn-hover keyBtn" id="hold_key"></div></td>
                                 </tr>
                             </tbody>
                         </table>
