[js] 로컬스토리지 암호화 저장 수정 完

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div>
                 <div>
                     <p>PRESS THE DESIRED KEY FOR</p>
-                    <div class="modal_title">Keycode</div>
+                    <div class="modal_title" id="action">Keycode</div>
                     <dialog class="speech_bubble" id="invalid_key">
                         <span>Invalid Key&nbsp;&nbsp;<a href="#" id="closeInvalidKey">✖</a></span>
                     </dialog>
