[js] 옵션 모달 完

--- a/index.html
+++ b/index.html
@@ -305,9 +305,10 @@
         <div class="modal_window of_check">
             <div>
                 <div>
-                    <div class="modal_title">RESET OPTIONS?/RESET HIGH SCORES?</div>
-                    <a href="#" class="modal_button I_block resetOK"><span>OK</span></a>
-                    <a href="#" class="modal_button O_block resetCancel"><span>CANCEL</span></a>
+                    <div class="modal_title wordForWord" id="confirm_reset_scores">RESET HIGH SCORES?</div>
+                    <div class="modal_title wordForWord" id="confirm_reset_options">RESET OPTIONS?</div>
+                    <a href="#" class="modal_button I_block resetOK"><span class="wordForWord" id="resetOK">OK</span></a>
+                    <a href="#" class="modal_button O_block resetCancel"><span class="wordForWord" id="resetCancel">CANCEL</span></a>
                 </div>
             </div>
         </div>
