[css] 순위표 양식 수정

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <div id="lowerBorderBox"></div>
             <div id="outerUpperBox"></div>
             <div id="outerLowerBox"></div>
-            <div class="logo_title" id="innerUpperBox">
+            <div class="logo_title wordForWord" id="innerUpperBox">
                 <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
             </div>
-            <div class="logo_title" id="textShadowBox">TETRIS</div>
+            <div class="logo_title wordForWord" id="textShadowBox">TETRIS</div>
             <div id="innerLowerBox"></div>
         </div>
         <div id="home_menu">
-            <a href="#" class="home_button Z_block play"><span>PLAY</span></a>
+            <a href="#" class="home_button Z_block play"><span class="wordForWord" id="play_button">PLAY</span></a>
             <div id="button_background">
                 <span>◀</span><span>▶</span>
             </div>
             <div id="level_button">
                 <a href="#" class="arrow_button left_arrow" id="levelMinus"><span>◀</span></a>
-                <a href="#" class="home_button level" id="levelup"><span>LEVEL:&nbsp;</span><span>1</span></a>
+                <a href="#" class="home_button wordForWord level" id="levelup"><span>LEVEL:&nbsp;</span><span id="level_num">1</span></a>
                 <a href="#" class="arrow_button right_arrow" id="levelPlus"><span>▶</p></span></a>
             </div>
-            <a href="#" class="home_button O_block option"><span>OPTIONS</span></a>
-            <a href="#" class="home_button S_block howtoplay"><span>HOW TO PLAY</span></a>
-            <a href="#" class="home_button J_block highscores"><span>HIGH SCORES</span></a>
+            <a href="#" class="home_button O_block option"><span class="wordForWord" id="options_button">OPTIONS</span></a>
+            <a href="#" class="home_button S_block howtoplay"><span class="wordForWord" id="howtoplay_button">HOW TO PLAY</span></a>
+            <a href="#" class="home_button J_block highscores"><span class="wordForWord" id="highscores_button">HIGH SCORES</span></a>
         </div>
     </div>
     <div id="ingame" style="visibility: hidden;">
@@ -185,8 +185,8 @@
             <div>
                 <div>
                     <div class="modal_title">HOW TO PLAY</div>
-                    <table></table>
-                    <a href="#" class="modal_button optionOK"><span>OK</span></a>
+                    <div class=""></div>
+                    <a href="#" class="modal_button howToPlayDone"><span>DONE</span></a>
                 </div>
             </div>
         </div>
