[js] ᄒᆞᆫ글化 함수 작성 中(관형사 및 기수사, 서수사 변환 함수 完)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="level_button">
                 <a href="#" class="arrow_button left_arrow" id="levelMinus"><span>◀</span></a>
-                <a href="#" class="home_button wordForWord level" id="levelup"><span>LEVEL:&nbsp;</span><span id="level_num">1</span></a>
+                <a href="#" class="home_button wordForWord level" id="levelup"><span>LEVEL&nbsp;</span><span id="level_num">1</span></a>
                 <a href="#" class="arrow_button right_arrow" id="levelPlus"><span>▶</p></span></a>
             </div>
             <a href="#" class="home_button O_block option"><span class="wordForWord" id="options_button">OPTIONS</span></a>
