--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="./css/game_board.css" rel="stylesheet">
     <link href="./css/text_animation.css" rel="stylesheet">
     <link href="./css/modal.css" rel="stylesheet">
+    <link href="./css/howtoplay.css" rel="stylesheet">
     <link href="./css/font.css" rel="stylesheet">
     <script src="./js/home.js" type="module"></script>
 </head>
@@ -27,13 +28,13 @@
         </div>
         <div id="home_menu">
             <a href="#" class="home_button Z_block play"><span class="wordForWord" id="play_button">PLAY</span></a>
-            <div id="button_background">
+            <div class="button_background" id="home_button_background">
                 <span>◀</span><span>▶</span>
             </div>
             <div id="level_button">
                 <a href="#" class="arrow_button left_arrow" id="levelMinus"><span>◀</span></a>
                 <a href="#" class="home_button wordForWord level" id="levelup"><span>LEVEL&nbsp;</span><span id="level_num">1</span></a>
-                <a href="#" class="arrow_button right_arrow" id="levelPlus"><span>▶</p></span></a>
+                <a href="#" class="arrow_button right_arrow" id="levelPlus"><span>▶</span></a>
             </div>
             <a href="#" class="home_button O_block option"><span class="wordForWord" id="options_button">OPTIONS</span></a>
             <a href="#" class="home_button S_block howtoplay"><span class="wordForWord" id="howtoplay_button">HOW TO PLAY</span></a>
@@ -45,10 +46,10 @@
             <source src="./sound/bgm/Korobeiniki.mp3" type="audio/mpeg">
             <source src="./sound/bgm/Korobeiniki.ogg" type="audio/ogg">
         </audio>
-        <div class="tetris" id="title">
+        <div class="tetris wordForWord" id="title">
             <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
         </div>
-        <div class="tetris" id="titleShadow">TETRIS</div>
+        <div class="tetris wordForWord" id="titleShadow">TETRIS</div>
         <div class="container" id="background">
             <div class="item" id="leftBackground">
             </div>
@@ -161,21 +162,21 @@
         <div class="modal_window of_highscore">
             <div>
                 <div>
-                    <div class="modal_title">HIGH SCORES</div>
+                    <div class="modal_title wordForWord" id="highscores">HIGH SCORES</div>
                     <table id="score_table">
                         <thead>
                             <tr>
-                                <th style="width: 14%;">RANK</th>
-                                <th style="width: 25%;">NAME</th>
-                                <th style="width: 22%;">SCORE</th>
-                                <th style="width: 12%;">LINES</th>
-                                <th style="width: 24%;">DATE</th>
+                                <th class="wordForWord" id="score_rank" style="width: 16%;">RANK</th>
+                                <th class="wordForWord" id="score_name" style="width: 24.5%;">NAME</th>
+                                <th class="wordForWord" id="score_score" style="width: 21.5%;">SCORE</th>
+                                <th class="wordForWord" id="score_lines" style="width: 12%;">LINES</th>
+                                <th class="wordForWord" id="score_date" style="width: 23%;">DATE</th>
                             </tr>
                         </thead>
                         <tbody>
                         </tbody>
                     </table>
-                    <a href="#" class="modal_button scoreOK"><span>OK</span></a>
+                    <a href="#" class="modal_button scoreOK"><span class="wordForWord" id="scoreOk">OK</span></a>
                 </div>
             </div>
         </div>
@@ -184,9 +185,71 @@
         <div class="modal_window of_howtoplay">
             <div>
                 <div>
-                    <div class="modal_title">HOW TO PLAY</div>
-                    <div class=""></div>
-                    <a href="#" class="modal_button howToPlayDone"><span>DONE</span></a>
+                    <div class="modal_title wordForWord" id="howtoplayTitle">HOW TO PLAY</div>
+                    <div class="howToPlayframe">
+                        <div class="article">
+                            <div class="article_index">1</div>
+                            <div class="article_item">
+                                <div class="article_title">TETRIMINO&nbsp;</div>
+                                <div class="article_content">The game is played using seven types of pieces, each consisting of four squares connected orthogonally.</div>
+                            </div>
+                        </div>
+                        <div class="article">
+                            <div class="article_index">2</div>
+                            <div class="article_item">
+                                <div class="article_title">GRAVITY&nbsp;</div>
+                                <div class="article_content">blahblah</div>
+                            </div>
+                        </div>
+                        <div class="article">
+                            <div class="article_index">3</div>
+                            <div class="article_item">
+                                <div class="article_title">LINE CLEAR&nbsp;</div>
+                                <div class="article_content">blahblah</div>
+                            </div>
+                        </div>
+                        <div class="article">
+                            <div class="article_index">4</div>
+                            <div class="article_item">
+                                <div class="article_title">MOVE&nbsp;</div>
+                                <div class="article_content">blahblah</div>
+                            </div>
+                        </div>
+                        <div class="article">
+                            <div class="article_index">5</div>
+                            <div class="article_item">
+                                <div class="article_title">GHOST PIECE&nbsp;</div>
+                                <div class="article_content">blahblah</div>
+                            </div>
+                        </div>
+                        <div class="article">
+                            <div class="article_index">6</div>
+                            <div class="article_item">
+                                <div class="article_title">HOLD&nbsp;</div>
+                                <div class="article_content">blahblah</div>
+                            </div>
+                        </div>
+                        <div class="article">
+                            <div class="article_index">7</div>
+                            <div class="article_item">
+                                <div class="article_title">GAME OVER&nbsp;</div>
+                                <div class="article_content">blahblah</div>
+                            </div>
+                        </div>
+                        <div id="example">
+                            <div id="example_container">
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="button_background" id="howtoplay_button_background">
+                        <span>◀</span><span>▶</span>
+                    </div>
+                    <div id="howtoplay_buttons">
+                        <a href="#" class="arrow_button left_arrow"><span>◀</span></a>
+                        <a href="#" class="modal_button howToPlayDone"><span class="wordForWord" id="howToPlayDone">DONE</span></a>
+                        <a href="#" class="arrow_button right_arrow"><span>▶</span></a>
+                    </div>
                 </div>
             </div>
         </div>
