[js] 게임 방법 페이지 함수 구현 中

--- a/index.html
+++ b/index.html
@@ -186,60 +186,58 @@
             <div>
                 <div>
                     <div class="modal_title wordForWord" id="howtoplayTitle">HOW TO PLAY</div>
-                    <div class="howToPlayframe">
-                        <div class="article">
-                            <div class="article_index">1</div>
-                            <div class="article_item">
-                                <div class="article_title">TETRIMINO&nbsp;</div>
-                                <div class="article_content">The game is played using seven types of pieces, each consisting of four squares connected orthogonally.</div>
+                    <div class="howToPlayframe" id="page1" style="visibility: hidden;">
+                        <div class="article" id="ofTetromino">
+                            <div class="article_index wordForWord" id="howto1">1</div>
+                            <div class="article_item wordForWord" id="item1">
+                                <div class="article_title wordForWord" id="tetromino_title">TETROMINO&nbsp;</div>
+                                <div class="article_content wordForWord" id="tetromino_explanation"></div>
                             </div>
                         </div>
-                        <div class="article">
-                            <div class="article_index">2</div>
-                            <div class="article_item">
-                                <div class="article_title">GRAVITY&nbsp;</div>
-                                <div class="article_content">blahblah</div>
+                        <div class="article" id="ofGravity">
+                            <div class="article_index wordForWord" id="howto2">2</div>
+                            <div class="article_item wordForWord" id="item2">
+                                <div class="article_title wordForWord" id="gravity_title">GRAVITY&nbsp;</div>
+                                <div class="article_content wordForWord" id="gravity_explanation"></div>
                             </div>
                         </div>
-                        <div class="article">
-                            <div class="article_index">3</div>
-                            <div class="article_item">
-                                <div class="article_title">LINE CLEAR&nbsp;</div>
-                                <div class="article_content">blahblah</div>
+                        <div class="article" id="ofLineClear">
+                            <div class="article_index wordForWord" id="howto3">3</div>
+                            <div class="article_item wordForWord" id="item3">
+                                <div class="article_title wordForWord" id="lineclear_title">LINE CLEAR&nbsp;</div>
+                                <div class="article_content wordForWord" id="lineclear_explanation">blahblah</div>
                             </div>
                         </div>
-                        <div class="article">
-                            <div class="article_index">4</div>
-                            <div class="article_item">
-                                <div class="article_title">MOVE&nbsp;</div>
-                                <div class="article_content">blahblah</div>
+                        <div class="article" id="ofMove">
+                            <div class="article_index wordForWord" id="howto4">4</div>
+                            <div class="article_item wordForWord" id="item4">
+                                <div class="article_title wordForWord" id="move_title">MOVE&nbsp;</div>
+                                <div class="article_content wordForWord" id="move_explanation">blahblah</div>
                             </div>
                         </div>
-                        <div class="article">
-                            <div class="article_index">5</div>
-                            <div class="article_item">
-                                <div class="article_title">GHOST PIECE&nbsp;</div>
-                                <div class="article_content">blahblah</div>
+                        <div class="article" id="ofGhostPiece">
+                            <div class="article_index wordForWord" id="howto5">5</div>
+                            <div class="article_item wordForWord" id="item5">
+                                <div class="article_title wordForWord" id="ghostpiece_title">GHOST PIECE&nbsp;</div>
+                                <div class="article_content wordForWord" id="ghostpiece_explanation">blahblah</div>
                             </div>
                         </div>
-                        <div class="article">
-                            <div class="article_index">6</div>
-                            <div class="article_item">
-                                <div class="article_title">HOLD&nbsp;</div>
-                                <div class="article_content">blahblah</div>
+                        <div class="article" id="ofHold">
+                            <div class="article_index wordForWord" id="howto6">6</div>
+                            <div class="article_item wordForWord" id="item6">
+                                <div class="article_title wordForWord" id="hold_title">HOLD&nbsp;</div>
+                                <div class="article_content wordForWord" id="hold_explanation">blahblah</div>
                             </div>
                         </div>
-                        <div class="article">
-                            <div class="article_index">7</div>
-                            <div class="article_item">
-                                <div class="article_title">GAME OVER&nbsp;</div>
-                                <div class="article_content">blahblah</div>
+                        <div class="article" id="ofGameOver">
+                            <div class="article_index wordForWord" id="howto7">7</div>
+                            <div class="article_item wordForWord" id="item7">
+                                <div class="article_title wordForWord" id="gameover_title">GAME OVER&nbsp;</div>
+                                <div class="article_content wordForWord" id="gameover_explanation">blahblah</div>
                             </div>
                         </div>
                         <div id="example">
-                            <div id="example_container">
-                                
-                            </div>
+                            <div id="example_container"></div>
                         </div>
                     </div>
                     <div class="button_background" id="howtoplay_button_background">
